[gd_scene load_steps=6 format=3 uid="uid://c3e7obaarmaxp"]

[ext_resource type="Texture2D" uid="uid://di1qb0i3eo5ka" path="res://assets/BreakOut Assets x2.png" id="1_4twwg"]
[ext_resource type="Script" path="res://assets/ball/ball.gd" id="1_vri4w"]
[ext_resource type="AudioStream" uid="uid://bu8hc5co1pao7" path="res://assets/sfx/bounce.wav" id="3_qoqnm"]
[ext_resource type="AudioStream" uid="uid://bxwaplsewb310" path="res://assets/sfx/wall_bounce.wav" id="4_fu6m3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n16th"]
size = Vector2(16, 16)

[node name="Ball" type="CharacterBody2D" groups=["ball"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_vri4w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_n16th")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_4twwg")
region_enabled = true
region_rect = Rect2(384, 432, 16, 16)

[node name="PaddleBounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qoqnm")
volume_db = -10.0
pitch_scale = 0.9

[node name="BrickBounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qoqnm")
volume_db = -10.0
pitch_scale = 1.2

[node name="WallBounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fu6m3")
